--- a/Client_App/Views/Forms/Forms1/Form_16.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_16.axaml
@@ -351,6 +351,7 @@
 					Items="{Binding FormList}"
 					SelectedItem="{Binding SelectedForm}">
 					<interactivity:Interaction.Behaviors>
+						<local:DataGridColumnWidthLoadBehavior FormNum="1.6"/>
 						<local:DataGridPointerBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DeselectDataGridOnClickOutsideBehavior/>
