--- a/Client_App/Views/Forms/Forms1/Form_17.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_17.axaml
@@ -420,6 +420,7 @@
 					Items="{Binding FormList}"
 					SelectedItem="{Binding SelectedForm}">
 					<interactivity:Interaction.Behaviors>
+						<local:DataGridColumnWidthLoadBehavior FormNum="1.7"/>
 						<local:DataGridPointerBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DeselectDataGridOnClickOutsideBehavior/>
