--- a/Client_App/Views/Forms/Forms1/Form_17.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_17.axaml
@@ -432,6 +432,7 @@
 					
                     <interactivity:Interaction.Behaviors>
 						<local:DataGridPointerBehavior/>
+						<local:DataGridColumnWidthLoadBehavior FormNum="1.7"/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DeselectDataGridOnClickOutsideBehavior/>
 						<local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
