--- a/Client_App/Views/Forms/Forms1/Form_14.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_14.axaml
@@ -310,6 +310,7 @@
 						
                         <interactivity:Interaction.Behaviors>
 							<local:DataGridPointerBehavior/>
+							<local:DataGridColumnWidthLoadBehavior FormNum="1.4"/>
                             <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 							<local:DeselectDataGridOnClickOutsideBehavior/>
 							<local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
