Fixed Saving ColumnsWidth Bug

--- a/Client_App/Views/Forms/Forms1/Form_13.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_13.axaml
@@ -313,7 +313,8 @@
 					x:Name="dataGrid"
 					x:CompileBindings="True"
 					Items="{Binding FormList}"
-					SelectedItem="{Binding SelectedForm}">
+					SelectedItem="{Binding SelectedForm}"
+					ColumnWidth ="125">
 					<interactivity:Interaction.Behaviors>
 						<local:DataGridColumnWidthLoadBehavior FormNum="1.3"/>
 						<local:DataGridPointerBehavior/>
