--- a/Client_App/Views/Forms/Forms1/Form_15.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_15.axaml
@@ -336,7 +336,8 @@
 					x:CompileBindings="True"
 					x:Name="dataGrid"
 					Items="{Binding FormList}"
-					SelectedItem="{Binding SelectedForm}">
+					SelectedItem="{Binding SelectedForm}"
+					ColumnWidth="125">
 
                     <interactivity:Interaction.Behaviors>
 						<local:DataGridPointerBehavior/>
