--- a/Client_App/Views/Forms/Forms1/Form_17.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_17.axaml
@@ -428,7 +428,8 @@
 					x:CompileBindings="True"
 					x:Name="dataGrid"
 					Items="{Binding FormList}"
-					SelectedItem="{Binding SelectedForm}">
+					SelectedItem="{Binding SelectedForm}"
+					ColumnWidth="125">
 					
                     <interactivity:Interaction.Behaviors>
 						<local:DataGridPointerBehavior/>
