--- a/Client_App/Views/Forms/Forms1/Form_14.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_14.axaml
@@ -327,6 +327,8 @@
 		                <local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 					    <local:DataGridPointerBehavior/>
 						<local:DeselectDataGridOnClickOutsideBehavior/>
+						<local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
+						<local:DataGridAlternateArrowsKeyControl IsEditing="{Binding DataGridIsEditing, Mode=OneWay}"/>
 					</interactivity:Interaction.Behaviors>
 
 		            <DataGrid.Columns>
