--- a/Client_App/Views/Forms/Forms1/Form_17.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_17.axaml
@@ -425,6 +425,8 @@
 						<local:DataGridPointerBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DeselectDataGridOnClickOutsideBehavior/>
+						<local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
+						<local:DataGridAlternateArrowsKeyControl IsEditing="{Binding DataGridIsEditing, Mode=OneWay}"/>
 					</interactivity:Interaction.Behaviors>
 
 					<DataGrid.Columns>
