--- a/Client_App/App.axaml
+++ b/Client_App/App.axaml
@@ -226,17 +226,16 @@
         </Style>
         <Style Selector="DataGrid.notesTable">
             <Setter Property="CornerRadius" Value="5"/>
-            <Setter Property="Width" Value="660"/>
             <Setter Property="MaxHeight" Value="210"/>
 			<Setter Property="Height" Value="210"/>
 			<Setter Property="ColumnHeaderHeight" Value="25"/>
             <Setter Property="RowBackground" Value="White"/>
 			<Setter Property="Background" Value="LightGray"/>
 			<Setter Property="SelectionMode" Value="Extended"/>
+			<Setter Property="CanUserResizeColumns" Value="True"/>
             <Setter Property="AlternatingRowBackground" Value="White"/>
             <Setter Property="Margin" Value="5"/>
 			<Setter Property="GridLinesVisibility" Value="All"></Setter>
-			<Setter Property="HorizontalScrollBarVisibility" Value="Hidden"></Setter>
         </Style>
 		
 		<Style Selector="DataGrid.notesTable TextBox">
