--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -133,7 +133,7 @@
 					</Grid>
 				</Border>
 				<Border Classes="borderContainer">
-					<Grid Margin="5" RowDefinitions="Auto,Auto">
+					<Grid Margin="5" RowDefinitions="Auto,Auto,Auto">
 						
 						<Button Grid.Row="0" Command="{Binding SourceTransmissionAll}"> Перевести все РВ в РАО</Button>
 					
@@ -141,6 +141,11 @@
 							<TextBlock Margin="5" >Автозаполнение:</TextBlock>
 							<CheckBox Margin="5" IsChecked="{Binding IsAutoReplaceEnabled}"></CheckBox>
 						</StackPanel>
+
+						<Button Grid.Row="2" Margin="5" 
+								Command="{Binding SetDefaultColumnWidth}" 
+                                CommandParameter="{Binding ElementName=dataGrid}"  
+								Content="Выставить ширину колонок по умолчанию"/>
 					</Grid>
 				</Border>
 
