--- a/Client_App/Views/Forms/Forms1/Form_18.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_18.axaml
@@ -134,13 +134,17 @@
 					</Grid>
 				</Border>
 				<Border Classes="borderContainer">
-					<Grid Margin="5" RowDefinitions="Auto,Auto">
+					<Grid Margin="5" RowDefinitions="Auto,Auto,Auto">
 
 
 						<StackPanel Grid.Row="1" Orientation="Horizontal">
 							<TextBlock Margin="5" >Автозаполнение:</TextBlock>
 							<CheckBox Margin="5" IsChecked="{Binding IsAutoReplaceEnabled}"></CheckBox>
 						</StackPanel>
+						<Button Grid.Row="2" Margin="5"
+								Command="{Binding SetDefaultColumnWidth}"
+                                CommandParameter="{Binding ElementName=dataGrid}"
+								Content="Выставить ширину колонок по умолчанию"/>
 					</Grid>
 				</Border>
 
