--- a/Client_App/Views/Controls/ExecutorDataControl.axaml
+++ b/Client_App/Views/Controls/ExecutorDataControl.axaml
@@ -3,45 +3,82 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="Client_App.ExecutorDataControl">
-	<Grid Margin="5" RowDefinitions ="*,*,*,*,*" ColumnDefinitions="*,2*">
-		<TextBlock Grid.Row="0"
-				   Grid.Column="0"
-				   Margin="5"
-				   Text="ФИО исполнителя:"/>
-		<TextBox Grid.Row="0"
-				 Grid.Column="1"
-				 Margin="5"
-				 Text="{Binding FIO}"/>
-		<TextBlock Grid.Row="1"
-				   Grid.Column="0"
-				   Margin="5"
-				   Text="Должность:"/>
-		<TextBox Grid.Row="1"
-				 Grid.Column="1"
-				 Margin="5"
-				Text="{Binding Grade}"/>
-		<TextBlock Grid.Row="2"
-				   Grid.Column="0"
-				   Margin="5"
-				   Text="Телефон:"/>
-		<TextBox Grid.Row="2"
-				 Grid.Column="1"
-				 Margin="5"
-				 Text="{Binding Phone}"/>
-		<TextBlock Grid.Row="3"
-				   Grid.Column="0"
-				   Margin="5"
-				   Text="Электронная почта:"/>
-		<TextBox Grid.Row="3"
-				 Grid.Column="1"
-				 Margin="5"
-				 Text="{Binding Email}"/>
-		<Button Grid.Row="4"
-				Grid.Column="0"
-				Grid.ColumnSpan="2"
-				Margin="5"
-				Click="CopyExecutorData_Click"
-				Content="Скопировать данные предыдущей формы"/>
-	</Grid>
+             x:Class="Client_App.Controls.ExecutorDataControl">
+	<StackPanel>
+		<Grid Margin="5" RowDefinitions ="*,*,*,*,*" ColumnDefinitions="*,2*">
+			<TextBlock Grid.Row="0"
+					   Grid.Column="0"
+					   Margin="5"
+					   Text="ФИО исполнителя:"/>
+			<TextBox Grid.Row="0"
+					 Grid.Column="1"
+					 Margin="5"
+					 Text="{Binding FIO}"/>
+			<TextBlock Grid.Row="1"
+					   Grid.Column="0"
+					   Margin="5"
+					   Text="Должность:"/>
+			<TextBox Grid.Row="1"
+					 Grid.Column="1"
+					 Margin="5"
+					Text="{Binding Grade}"/>
+			<TextBlock Grid.Row="2"
+					   Grid.Column="0"
+					   Margin="5"
+					   Text="Телефон:"/>
+			<TextBox Grid.Row="2"
+					 Grid.Column="1"
+					 Margin="5"
+					 Text="{Binding Phone}"/>
+			<TextBlock Grid.Row="3"
+					   Grid.Column="0"
+					   Margin="5"
+					   Text="Электронная почта:"/>
+			<TextBox Grid.Row="3"
+					 Grid.Column="1"
+					 Margin="5"
+					 Text="{Binding Email}"/>
+			<Button Grid.Row="4"
+					Grid.Column="0"
+					Margin="5"
+					Content="Сохранить данные исполнителя"/>
+			<Button x:Name="LoadButton"
+					Grid.Row="4"
+					Grid.Column="1"
+					Margin="5"
+					Content="Загрузить данные исполнителя"
+					Command="{Binding OpenPopupCommand}"/>
+		</Grid>
+		<Popup x:Name="ExecutorsPopup"
+			IsOpen="{Binding PopupIsOpen, Mode=TwoWay}"
+			PlacementTarget="{Binding #LoadButton}"
+			PlacementMode="Right"
+			IsLightDismissEnabled="True">
+			<Border Background="White"
+					BorderBrush="Gray"
+					BorderThickness="1"
+					CornerRadius="4"
+					Padding="10">
+				<StackPanel>
+					<TextBlock Text="Выбор отчета"/>
+					<ListBox Items="{Binding ExecutorList}"
+							 SelectedItem="{Binding SelectedReport, Mode=TwoWay}"
+							 SelectionMode="Single">
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+								<Grid ColumnDefinitions="*,Auto" RowDefinitions="20,20,20,20">
+									<TextBlock Grid.Column="0" Grid.Row="0" Text=""/>
+									<TextBlock Grid.Column="0" Grid.Row="1" Text=""/>
+									<TextBlock Grid.Column="0" Grid.Row="2" Text=""/>
+									<TextBlock Grid.Column="0" Grid.Row="3" Text=""/>
+									
+									<Button Grid.Column="1" Grid.Row="0" Grid.RowSpan="4" Content="X"/>
+								</Grid>
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+					</ListBox>
+				</StackPanel>
+			</Border>		
+		</Popup>
+	</StackPanel>
 </UserControl>
