--- a/Client_App/Views/Forms/Forms4/Form_40.axaml
+++ b/Client_App/Views/Forms/Forms4/Form_40.axaml
@@ -62,10 +62,22 @@
 				</StackPanel>
 				<StackPanel Grid.Column="1"
                             Orientation="Vertical">
-					<TextBox
-						Height="26"
-						Margin="0,0,0,3"
-						Text="{Binding Storage.Rows40[0].SubjectRF.Value}"/>
+					<Grid ColumnDefinitions="30,*">
+					    <TextBox Grid.Column="0" 
+								 Height="26" 
+								 Margin="0,0,0,3" 
+								 Text="{Binding CodeOfSubjectRF}" 
+								 MaxLength="2"/>
+						<AutoCompleteBox
+							Grid.Column="1"
+						    MaxDropDownHeight="300"
+						    Height="26"
+						    Items="{Binding SubjectRFCollection}"
+						    FilterMode="Contains"
+						    Margin="0,0,0,3"
+						    Text="{Binding NameOfSubjectRF}">
+					    </AutoCompleteBox>
+					</Grid>
 					<TextBox
 						Height="26"
 						Margin="0,0,0,3"
