--- a/Client_App/Views/Forms/Forms4/Form_41.axaml
+++ b/Client_App/Views/Forms/Forms4/Form_41.axaml
@@ -68,6 +68,8 @@
 							<TextBlock Margin="5">Номер корректировки:</TextBlock>
 							<TextBox Margin="5" Width="75" Text="{Binding Path=Report.CorrectionNumber.Value}"/>
 						</StackPanel>
+
+						<Button Grid.Row="3" Content="Сформировать" Command="{Binding GenerateForm41}" ></Button>
 					</Grid>
 				</Border>
 
