--- a/Client_App/Views/Messages/AskForm41Message.axaml
+++ b/Client_App/Views/Messages/AskForm41Message.axaml
@@ -7,7 +7,8 @@
         x:Class="Client_App.AskForm41Message"
 		Width="600"
 		Height="400"
-        Title="Выберите отчет">
+        Title="Выберите отчет"
+		WindowStartupLocation="CenterOwner">
 	<Grid RowDefinitions="Auto,*,Auto">
 		<TextBlock Grid.Row="0" Margin="10,5,10,5" Text="Выберите отчет по форме 4.1, на основе которого хотите сформировать отчет" TextWrapping="Wrap"/>
 		<DataGrid Grid.Row="1" Margin="5"
