in work (need check)

--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -17,6 +17,7 @@
     d:DesignWidth="900"
     x:DataType="vm:Form_11VM"
     mc:Ignorable="d"
+	KeyDown="DataGrid_KeyDown"
 	KeyUp="DataGrid_KeyUp"
 	x:Name="1.1"
 	WindowStartupLocation="CenterScreen"
@@ -819,6 +820,7 @@
 						   Margin="5"/>
 			</Grid>
 		</Border>
+		
 		<Expander Grid.Row ="3"
 				  IsExpanded="True"
 				  ExpandDirection="Up"
