Add CheckTotal for Form41

--- a/Client_App/Views/Forms/Forms4/Form_40.axaml
+++ b/Client_App/Views/Forms/Forms4/Form_40.axaml
@@ -52,6 +52,7 @@
 					    Grid.Row="0"
 					    Grid.Column="0"
 						Margin="0,0,0,3"
+						Watermark="Код"
 						Text="{Binding CodeOfSubjectRF}"
 						MaxLength="2"/>
 				    <AutoCompleteBox
@@ -61,6 +62,7 @@
 					    Items="{Binding SubjectRFCollection}"
 					    FilterMode="Contains"
 					    Margin="0,0,0,3"
+						Watermark="Субъект Российской Федерации"
 					    Text="{Binding NameOfSubjectRF}">
 				    </AutoCompleteBox>
 				</Grid>
