--- a/Client_App/Views/Messages/AskSubjectRFMessage.axaml
+++ b/Client_App/Views/Messages/AskSubjectRFMessage.axaml
@@ -16,6 +16,7 @@
 					 Height="26"
 					 Margin="0,0,0,3"
 					 Text="{Binding CodeOfSubjectRF}"
+					 Watermark="Код"
 					 MaxLength="2"/>
 			<AutoCompleteBox
 				x:Name="autoCompleteBox"
@@ -24,6 +25,7 @@
 				Height="26"
 				Items="{Binding SubjectRFCollection}"
 				FilterMode="Contains"
+				Watermark="Субъект Российской Федерации"
 				Margin="0,0,0,3"
 				Text="{Binding NameOfSubjectRF}">
 			</AutoCompleteBox>
