--- a/Client_App/Views/Forms/Forms1/Form_11.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_11.axaml
@@ -97,8 +97,7 @@
 				</Border>
 
 				<Border Classes="borderContainer">
-					<controls:ExecutorDataControl
-						DataContext="{Binding ExecutorDataControlVM}"></controls:ExecutorDataControl>
+					<controls:ExecutorDataControl DataContext="{Binding ExecutorDataControlVM}"/>
 				</Border>
 				
 				<Border Classes="borderContainer">
