--- a/Client_App/Views/Forms/Forms1/Form_12.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_12.axaml
@@ -98,7 +98,7 @@
 
 				<Border Classes="borderContainer">
 					<controls:ExecutorDataControl
-						DataContext="{Binding ExecutorDataControlVM}"></controls:ExecutorDataControl>
+						DataContext="{Binding ExecutorDataControlVM}"/>
 				</Border>
 
 				<Border Classes="borderContainer">
