--- a/Client_App/Views/Forms/Forms4/Form_41.axaml
+++ b/Client_App/Views/Forms/Forms4/Form_41.axaml
@@ -73,49 +73,9 @@
 						<Button Grid.Row="3" Content="Сформировать" Command="{Binding GenerateForm41}" ></Button>
 					</Grid>
 				</Border>
-
+				
 				<Border Classes="borderContainer">
-					<Grid Margin="5" RowDefinitions ="*,*,*,*,*" ColumnDefinitions="*,2*">
-						<TextBlock Grid.Row="0"
-								   Grid.Column="0"
-								   Margin="5"
-								   Text="ФИО исполнителя:"/>
-						<TextBox Grid.Row="0"
-								 Grid.Column="1"
-								 Margin="5"
-								 Text="{Binding Path=Report.FIOexecutor.Value}">
-						</TextBox>
-						<TextBlock Grid.Row="1"
-								   Grid.Column="0"
-								   Margin="5"
-								   Text="Должность:"/>
-						<TextBox Grid.Row="1"
-								 Grid.Column="1"
-								 Margin="5"
-								Text="{Binding Path=Report.GradeExecutor.Value}"/>
-						<TextBlock Grid.Row="2"
-								   Grid.Column="0"
-								   Margin="5"
-								   Text="Телефон:"/>
-						<TextBox Grid.Row="2"
-								 Grid.Column="1"
-								 Margin="5"
-								 Text="{Binding Path=Report.ExecPhone.Value}"/>
-						<TextBlock Grid.Row="3"
-								   Grid.Column="0"
-								   Margin="5"
-								   Text="Электронная почта:"/>
-						<TextBox Grid.Row="3"
-								 Grid.Column="1"
-								 Margin="5"
-								 Text="{Binding Path=Report.ExecEmail.Value}"/>
-						<Button Grid.Row="4"
-								Grid.Column="0"
-								Grid.ColumnSpan="2"
-								Margin="5"
-								Click="CopyExecutorData_Click"
-								Content="Скопировать данные предыдущей формы"/>
-					</Grid>
+					<controls:ExecutorDataControl DataContext="{Binding ExecutorDataControlVM}"/>
 				</Border>
 
 			</WrapPanel>
@@ -232,9 +192,12 @@
 					SelectedItem="{Binding SelectedForm}">
 
 					<interactivity:Interaction.Behaviors>
+						<local:DataGridColumnWidthLoadBehavior FormNum="4.1"/>
 						<local:DataGridPointerBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DeselectDataGridOnClickOutsideBehavior/>
+						<local:DataGridEditingStateBehavior IsEditing="{Binding DataGridIsEditing, Mode=TwoWay}"/>
+						<local:DataGridAlternateArrowsKeyBehavior IsEditing="{Binding DataGridIsEditing, Mode=OneWay}"/>
 					</interactivity:Interaction.Behaviors>
 
 					<DataGrid.Columns>
@@ -421,24 +384,23 @@
 				  ColumnDefinitions="Auto,Auto,Auto,Auto">
 				<TextBlock Text="Текущая страница"
 					Grid.Row="0" Grid.Column="0" Margin="5"/>
-				<NumericUpDown Value="{Binding CurrentPage}" Increment="-1"
-					Grid.Row="0" Grid.Column="1" Margin="5">
-					<interactivity:Interaction.Behaviors>
-						<local:NumericUpDownDigitValidationBehavior/>
-					</interactivity:Interaction.Behaviors>
-				</NumericUpDown>
+
+				<controls:NumericLeftRight
+					Grid.Row="0" Grid.Column="1" Margin="5"
+					Value="{Binding CurrentPage}"
+					Minimum="1"/>
+				
 				<TextBlock Text ="Кол-во страниц:"
 					Grid.Row="0" Grid.Column="2" Margin="5"/>
 				<TextBlock Text="{Binding TotalPages}"
 					Grid.Row="0" Grid.Column="3" Margin="5"/>
 				<TextBlock Text="Кол-во строчек на странице"
 					Grid.Row="1" Grid.Column="0" Margin="5"/>
-				<NumericUpDown Value="{Binding RowCount}" Minimum="1"
-					Grid.Row="1" Grid.Column="1" Margin="5">
-					<interactivity:Interaction.Behaviors>
-						<local:NumericUpDownDigitValidationBehavior/>
-					</interactivity:Interaction.Behaviors>
-				</NumericUpDown>
+
+				<controls:NumericLeftRight
+					Grid.Row="1" Grid.Column="1" Margin="5"
+					Value="{Binding RowCount}"
+					Minimum="1"/>
 
 				<TextBlock Text="Всего строчек:"
 					Grid.Row="1" Grid.Column="2" Margin="5"/>
