--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -9,6 +9,7 @@
 	xmlns:local="using:Client_App.Behaviors"
 	xmlns:interactivity="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
 	xmlns:models="clr-namespace:Models.Collections;assembly=Models"
+	xmlns:controls="clr-namespace:Client_App.Controls"
     Title="{Binding Current_Db, Mode=OneWay}"
     d:DesignHeight="600"
     d:DesignWidth="800"
@@ -540,24 +541,19 @@
 										  ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
 										<TextBlock Text="Текущая страница"
 											Grid.Row="0" Grid.Column="0" Margin="5"/>
-										<NumericUpDown Increment="-1"
-											Grid.Row="0" Grid.Column="1" Margin="5">
-											<interactivity:Interaction.Behaviors>
-												<local:NumericUpDownDigitValidationBehavior/>
-											</interactivity:Interaction.Behaviors>
-										</NumericUpDown>
+
+										<controls:NumericLeftRight
+											Grid.Row="0" Grid.Column="1" Margin="5"
+											Minimum="1"/>
 										<TextBlock Text ="Кол-во страниц:"
 											Grid.Row="0" Grid.Column="2" Margin="5"/>
 										<TextBlock 
 											Grid.Row="0" Grid.Column="3" Margin="5"/>
 										<TextBlock Text="Кол-во строчек на странице"
 											Grid.Row="1" Grid.Column="0" Margin="5"/>
-										<NumericUpDown  Minimum="1"
-											Grid.Row="1" Grid.Column="1" Margin="5">
-											<interactivity:Interaction.Behaviors>
-												<local:NumericUpDownDigitValidationBehavior/>
-											</interactivity:Interaction.Behaviors>
-										</NumericUpDown>
+										<controls:NumericLeftRight
+											Grid.Row="1" Grid.Column="1" Margin="5"
+											Minimum="1"/>
 										<TextBlock Text="Кол-во строчек:"
 											Grid.Row="1" Grid.Column="2" Margin="5"/>
 										<TextBlock
@@ -689,24 +685,19 @@
 										  ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
 										<TextBlock Text="Текущая страница"
 											Grid.Row="0" Grid.Column="0" Margin="5"/>
-										<NumericUpDown  Increment="-1"
-											Grid.Row="0" Grid.Column="1" Margin="5">
-											<interactivity:Interaction.Behaviors>
-												<local:NumericUpDownDigitValidationBehavior/>
-											</interactivity:Interaction.Behaviors>
-										</NumericUpDown>
+
+										<controls:NumericLeftRight
+											Grid.Row="0" Grid.Column="1" Margin="5"
+											Minimum="1"/>
 										<TextBlock Text ="Кол-во страниц:"
 											Grid.Row="0" Grid.Column="2" Margin="5"/>
 										<TextBlock 
 											Grid.Row="0" Grid.Column="3" Margin="5"/>
 										<TextBlock Text="Кол-во строчек на странице"
 											Grid.Row="1" Grid.Column="0" Margin="5"/>
-										<NumericUpDown Minimum="1"
-											Grid.Row="1" Grid.Column="1" Margin="5">
-											<interactivity:Interaction.Behaviors>
-												<local:NumericUpDownDigitValidationBehavior/>
-											</interactivity:Interaction.Behaviors>
-										</NumericUpDown>
+										<controls:NumericLeftRight
+											Grid.Row="1" Grid.Column="1" Margin="5"
+											Minimum="1"/>
 										<TextBlock Text="Кол-во строчек:"
 											Grid.Row="1" Grid.Column="2" Margin="5"/>
 										<TextBlock
