--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -543,20 +543,24 @@
 											Grid.Row="0" Grid.Column="0" Margin="5"/>
 
 										<controls:NumericLeftRight
+											Value="{Binding CurrentPageOrgs}"
 											Grid.Row="0" Grid.Column="1" Margin="5"
 											Minimum="1"/>
 										<TextBlock Text ="Кол-во страниц:"
 											Grid.Row="0" Grid.Column="2" Margin="5"/>
 										<TextBlock 
+											Text="{Binding TotalPagesOrgs}"
 											Grid.Row="0" Grid.Column="3" Margin="5"/>
 										<TextBlock Text="Кол-во строчек на странице"
 											Grid.Row="1" Grid.Column="0" Margin="5"/>
 										<controls:NumericLeftRight
+											Value="{Binding RowsCountOrgs}"
 											Grid.Row="1" Grid.Column="1" Margin="5"
 											Minimum="1"/>
 										<TextBlock Text="Кол-во строчек:"
 											Grid.Row="1" Grid.Column="2" Margin="5"/>
 										<TextBlock
+											Text="{Binding TotalRowsOrgs}"
 											Grid.Row="1" Grid.Column="3" Margin="5"/>
 
 										<TextBlock Text="Кол-во отчетов:"
@@ -686,24 +690,26 @@
 										<TextBlock Text="Текущая страница"
 											Grid.Row="0" Grid.Column="0" Margin="5"/>
 
-										<controls:NumericLeftRight
+										<controls:NumericLeftRight 
+											Value="{Binding CurrentPageForms}"
 											Grid.Row="0" Grid.Column="1" Margin="5"
 											Minimum="1"/>
 										<TextBlock Text ="Кол-во страниц:"
 											Grid.Row="0" Grid.Column="2" Margin="5"/>
-										<TextBlock 
+										<TextBlock Text="{Binding TotalPagesForms}"
 											Grid.Row="0" Grid.Column="3" Margin="5"/>
 										<TextBlock Text="Кол-во строчек на странице"
 											Grid.Row="1" Grid.Column="0" Margin="5"/>
 										<controls:NumericLeftRight
+											Value="{Binding RowsCountForms}"
 											Grid.Row="1" Grid.Column="1" Margin="5"
 											Minimum="1"/>
-										<TextBlock Text="Кол-во строчек:"
+										<TextBlock Text="Кол-во отчетов:"
 											Grid.Row="1" Grid.Column="2" Margin="5"/>
-										<TextBlock
+										<TextBlock Text="{Binding TotalRowsForms}"
 											Grid.Row="1" Grid.Column="3" Margin="5"/>
 
-										<TextBlock Text="Кол-во отчетов:"
+										<TextBlock Text="Кол-во строчек:"
 											Grid.Row="1" Grid.Column="4" Margin="5"/>
 										<TextBlock
 											Grid.Row="1" Grid.Column="5" Margin="5"/>
